succesfully created the error maodls which houses the feed back for users that try to log in without authorisation finally fix the issue as regards flwaless delivery on mobile devices

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -259,17 +259,8 @@ div .profile-photo-small{
   display: none;
 }
 
-#home #width100{
-  height: 300px;
-  width: 100%;
-}
-
 #home .close {
      right: 0; 
-}
-
-#home .alert-dismissible {
-  right: 0;
 }
 
 /*the profile page*/
