--- a/assets/css/grid.css
+++ b/assets/css/grid.css
@@ -17,14 +17,11 @@
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
-   /* justify-content: space-between; */
 }
 
 .quote-container{
-   text-align: center;
-   padding: 20px;
+   padding:1% 2%;
    box-sizing: border-box;
-   border: solid #213c467d 1px;
    flex-grow: 1;
 }
 
@@ -42,30 +39,49 @@
 
    .genreList{
       display: flex;
-      flex-wrap: wrap;
-      padding: 0 0 15px 0;
+      flex-wrap: nowrap;
+      padding: 0 0 10px 0;
       box-sizing: border-box;
+      flex-shrink: 1;
    }
 }
 
 @media screen and (min-width: 600px) {
-   .quote-container{
-      width: 100%;
+    .main-container{
+      width: 75%;
    }
+    .left-container{
+      display: block;
+      width: 25%;
+   }
+}
+
+@media screen and (min-width: 800px) {
+   .left-container{
+      display: none;
+   }
+   .main-container{
+      width: 100%;
+      flex-grow: 1;
+   }
+   .quote-container{
+      width: 50%;
+   }
+
 
 }
 
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 1000px) {
    .left-container{
       display: block;
       width: 15%;
    }
    .main-container{
-      width: 80%;
+      width: 85%;
       flex-grow: 1;
    }
    .quote-container{
-      width: 100%;
+      width: 50%;
    }
 
 
@@ -78,6 +94,10 @@
    }
    .left-container{
       width: 13%;
+   }
+
+    .quote-container{
+      width: 50%;
    }
 
    .main-container{
